# experimentation

./: .clang-format  .gitignore  BUILDING.md  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  Dockerfile  HACKING.md  Makefile  README.md  SOURCES.md
cmake/: install-config.cmake  install-rules.cmake  variables.cmake
cmake/lib/: drogon.cmake  json.cmake  opencv.cmake  openmp.cmake  raylib-cpp.cmake  raylib.cmake
example/: CMakeLists.txt  call_function.cpp  call_function_from_string.cpp  files_on_demand.cpp  json_dump.cpp  json_letter.cpp  list_all_files.cpp  opencv_online.cpp  password_generator.cpp  pixel_counter.cpp  sort.cpp
example/drogon/: base_drogon.cpp  helloworld_drogon.cpp
example/raylib/: bench.cpp  block.cpp  block.hpp  chunk.hpp  cube.cpp  generator.hpp  model.cpp  optimizer.hpp  perlin_noise.cpp  rect.cpp
example/raylib/world_of_cube/: bench.cpp  block.cpp  cube.cpp  model.cpp  rect.cpp
example/standard/: list_all_files.cpp  thanos.cpp
example/standard/filesystem/: recurvice.cpp  thanos.cpp
include/experimentation/: class.hpp  experimentation.hpp  file.hpp  fileOnDemand.hpp  file_on_demand.hpp  filesystem.hpp  forbiden.hpp  image.hpp  math.hpp  random.hpp  string.hpp  string_external.hpp
test/: CMakeLists.txt
test/bench/: call_member.cpp  json_item.cpp  map.cpp  math.cpp  randomize.cpp  string_palindrome.cpp  vector_add.cpp  vector_matrix.cpp  vector_op.cpp
test/source/: experimentation_bench.cpp  experimentation_test.cpp  math_bench.cpp  math_test.cpp  string_bench.cpp  vector_add_bench.cpp
test/source/benchmark/: call_member.cpp  json_item.cpp  map.cpp  math.cpp  randomize.cpp  string_palindrome.cpp  vectorAnd.cpp  vectorDiv.cpp  vectorMod.cpp  vectorMul.cpp  vectorOr.cpp  vectorSub.cpp  vectorSum.cpp  vectorXor.cpp  vector_matrix.cpp  vector_op.cpp
test/source/test/: experimentation.cpp  math.cpp
test/test/: experimentation.cpp
tools/: graphic.py  ninja-builder.sh
